# MagicSkills

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.magicskills/: collections.json
Aider_example/: AGENTS.md  Aider_back_ground.md  README.md  log1.txt  log2.txt
Aider_example/syncskills_agents_md_None/: AGENTS.md  Aider_back_ground.md  README.md  log1.txt  log2.txt
Aider_example/syncskills_agents_md_cli/: AGENTS.md  README.md  log1.txt  log2.txt
AutoGen_example/: README.md
ClaudeCode_example/: README .md  README.md  create_self_intro.js  package-lock.json  workfilow-tool.txt  workflow-cli.txt  workflow-none.txt  自我介绍.docx
ClaudeCode_example/.claude/: settings.local.json
ClaudeCode_example/syncskills_agents_md_None/: CLAUDE.md  README.md  log1.txt  log2.txt  log3.txt
ClaudeCode_example/syncskills_agents_md_cli/: CLAUDE.md  README.md  log1.txt  log2.txt  log3.txt
Codex_example/: AGENTS.md  README.md
Codex_example/syncskills_agents_md_None/: AGENTS.md  README.md  log1.txt  log2.txt
Codex_example/syncskills_agents_md_cli/: AGENTS.md  README.md  log1.txt  log2.txt
Cursor_example/: README.md  agent_self_intro.docx  create_agent_intro_doc.js  package-lock.json  workflow-none.txt
LlamaIndex_example/: README.md
Windsurf_example/: Cascade_Self_Introduction.docx  README.md  create_self_intro.js  package-lock.json  workflow-none.txt  workflow-tool.txt  worklow-cli.txt
autogen_example/: README.md  log1.json  log2.json  model.py
crewai_example/: README.md  log1.json  log2.json  model.py  requirements.txt
doc/: Cli Guide.md  Python API Guide.md  README.md  cli.md  cli.zh-CN.md  python-api.md  python-api.zh-CN.md
docs/: ast_comprehensive_guide.md
haystack_example/: AGENTS.md  README.md  log1.json  log2.json  model.py
langchain_example/: README.md  example.py  log1.json  log2.json  model.py  test.py
langgraph_example/: README.md  log1.json  log2.json  model.py
llamaindex_example/: README.md  log1.json  log2.json  model.py
semantic_kernel_example/: README.md  log.json  log1.json  log2.json  model.py
skills_for_all_agent/: __init__.py
smolagents_example/: README.md  log1.json  log2.json  model.py
tests/: test_agents_md.py  test_cli_registry.py  test_installer.py  test_listskill_cli.py  test_skills.py  test_syncskills_modes.py
transformers_smolagents_example/: README.md  log1.json  log2.json  model.py
(+45 files in other folders)
