[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "MagicSkills"
version = "0.1.0"
description = "Cross-platform skills manager and agent tool for SKILL.md-based skills."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
keywords = ["skills", "agents", "claude", "openskills", "tooling"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "pycparser>=2.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.1",
]

[project.scripts]
magicskills = "magicskills.cli:main"

[tool.hatch.build]
exclude = [
  "src/magicskills/skills/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/magicskills"]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
