[metadata]
name = skills-for-all-agent
version = 0.1.0
description = Lightweight skill loader and runner for agent function calling.
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
keywords = agent, skills, tooling, function-calling

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Homepage = https://example.com
    Repository = https://example.com
    Issues = https://example.com/issues


[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False


[options.packages.find]
where = .


[options.package_data]
* = *.md
